--- a/app/src/main/res/layout/text_view_terms.xml
+++ b/app/src/main/res/layout/text_view_terms.xml
@@ -1,49 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    card_view:cardCornerRadius="12dp"
+    card_view:cardElevation="6dp"
+    card_view:cardBackgroundColor="#FAFAFA">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/cyan"
-        android:elevation="4dp"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:title="Notes App"
-        app:titleTextColor="@android:color/black">
-        <Button
-            android:id="@+id/menu_btn"
-            android:layout_width="10dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="270dp"
-            android:background="@drawable/ellipsis_vertical_solid"/>
-    </androidx.appcompat.widget.Toolbar>
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_margin="16dp"
-        android:padding="8dp"/>
+        <TextView
+            android:id="@+id/textviewTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Note Title"
+            android:textStyle="bold"
+            android:textColor="@color/blue"
+            android:textSize="20sp" />
 
-    <Button
-        android:id="@+id/add_btn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="bottom|end"
-        android:layout_marginTop="570dp"
-        android:background="@drawable/square_plus_regular"
-        android:paddingRight="5dp"/>
+        <TextView
+            android:id="@+id/textviewContent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Note Content"
+            android:textColor="#424242"
+            android:textSize="16sp"
+            android:layout_marginTop="6dp" />
 
-    <FrameLayout
-        android:id="@+id/fragment_container_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
 
-</LinearLayout>
 
